<resources>
    <string name="app_name">Daily Workout exercise

</string>

    <string name="home">Home</string>
    <string name="exersice">Exercises</string>
    <string name="setting">Setting</string>
    <string name="take_rest">Take a Rest</string>
    <string name="Skip">SKIP</string>
    <string name="Done">DONE</string>
    <string name="wellDone">Well Done!</string>
    <string name="congresspech">Congratulation you Are done with today workout</string>
    <string name="second">10 Seconds</string>
    <string name="second1">20 Seconds</string>
    <string name="second2">30 Seconds</string>
    <string name="second3">60 Seconds</string>
    <string name="second4">90 Seconds</string>
    <string name="second5">120 Seconds</string>
    <string name="cancle">Cancel</string>
    <string name="rest_time">Rest Time</string>
    <string name="workout">Workout Difficultly</string>
    <string name="rate">Rate</string>
    <string name="calender">Calender</string>
    <string name="compose">Compose</string>
    <string name="reminder">Reminder</string>
    <string name="record">Daily Activity</string>
    <string name="Contact">Contact us</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="workoutdone">Workout Done</string>
    <string name="InComplete">InComplete task</string>
    <string name="howtoperform">How to perform</string>
    <string name="compose_msg">Have a Problem?Please share it with us and will do our best to solve it!</string>

    <string name="ADS_VISIBILITY">YES</string>



    <string name="AdmobBannerAdsID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdmobFullScreenAdsID">ca-app-pub-3940256099942544/1033173712</string>

    <array name="strin_array">
        <item>10 Seconds</item>
        <item>20 Seconds</item>
        <item>30 Seconds</item>
        <item>60 Seconds</item>
        <item>90 Seconds</item>
        <item>120 Seconds</item>
    </array>

    <array name="type_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Difficult</item>
    </array>

    <array name="easy_array">
        <item>perform 20 plank with Leg lift</item>
        <item>perform 10 Bench Dips</item>
        <item>perform 10 squats</item>
        <item>perform 10 push-ups</item>
        <item>perform 30 leg-up chrunches</item>
        <item>perform 40 jumping jacks</item>
        <item>perform 10 bicycle crunches</item>
        <item>perform 10 lunges</item>
        <item>perform 20 basic crunches</item>
        <item>perform 40 high knees</item>
    </array>

    <array name="medium_array">
        <item>perform 30 plank with Leg lift</item>
        <item>perform 20 Bench Dips</item>
        <item>perform 20 squats</item>
        <item>perform 20 push-ups</item>
        <item>perform 60 leg-up chrunches</item>
        <item>perform 80 jumping jacks</item>
        <item>perform 20 bicycle crunches</item>
        <item>perform 20 lunges</item>
        <item>perform 40 basic crunches</item>
        <item>perform 60 high knees</item>
    </array>

    <array name="difficult">
        <item>perform 40 plank with Leg lift</item>
        <item>perform 40 Bench Dips</item>
        <item>perform 30 squats</item>
        <item>perform 30 squats</item>
        <item>eprform 90 leg-up chrunches</item>
        <item>perform 120 jumping jacks</item>
        <item>perform 40 bicycle crunches</item>
        <item>perform 30 lunges</item>
        <item>perform 80 basic crunches</item>
        <item>perform 120 high knees</item>
    </array>

    <string name="SHARE_APP_LINK">"https://play.google.com/store/apps/details?id=&quot;</string>
    <string name="E_MAIL">kevalmangukiya052@gmail.com</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
