<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/app_bar">

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">


            <LinearLayout
                android:id="@+id/lv_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_home_black_24dp" />

                <TextView
                    android:id="@+id/txt_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_ex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_ex"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_directions_walk_black_24dp" />

                <TextView
                    android:id="@+id/txt_ex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/exersice"
                    android:textSize="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_cal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_cal"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_perm_contact_calendar_black_24dp" />

                <TextView
                    android:id="@+id/txt_cal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/calender"
                    android:textSize="12dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_settings_black_24dp" />

                <TextView
                    android:id="@+id/txt_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textSize="12dp"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>